# docs/swagger.json
@@ -186,7 +186,10 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/entity.NoDb"
+                            }
                         }
                     }
                 }
@@ -382,6 +385,17 @@
                 },
                 "updated_at": {
                     "type": "integer"
+                }
+            }
+        },
+        "entity.NoDb": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
                 }
             }
         },
